--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,10 @@ include 'Task2'
 include 'Task3'
 include 'Task4'
 include 'Task5'
+include 'Task6'
+include 'Task7'
+include 'Task8'
+include 'Task9'
+include 'Task10'
+include 'Task11'
 
